# orca

./: .env.orca.tpl  .envrc  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CRATE_RESPONSIBILITIES.md  Cargo.toml  Makefile  PLUGINS.md  README.md  clippy.toml
projects/agents/: Cargo.toml  build.rs
projects/agents/src/: embedded.rs  lib.rs  registry.rs
projects/app-kit/: Cargo.toml
projects/app-kit/src/: lib.rs  lifecycle.rs
projects/auth/: Cargo.toml
projects/auth/src/: auth.rs  lib.rs  loopback_token.rs  oauth.rs  password.rs  pki.rs  secrets.rs  throttle.rs
projects/auth/tests/: login_e2e.rs
projects/containers/: Cargo.toml
projects/containers/src/: breaker.rs  ffi.rs  lib.rs  reconciler.rs  wedge.rs
projects/contract/: Cargo.toml
projects/contract/config-docs/: AGENTS.md  CANONICAL_SOURCES.md  CODING_RULES.md  DELEGATION.md  FRONTEND.md  MEMORY_SYSTEM.md  PERSONA.md  RULES.md  SEVERITY_RUBRIC.md  TOOL_RULES.md  plugin-schema.json
projects/contract/src/: backup.rs  cluster_roster.rs  ctx.rs  def.rs  diagnostics.rs  error.rs  guard.rs  host_facts.rs  json_any.rs  lib.rs  notification_source.rs  remote.rs  service_identity.rs  subprocess_env.rs  tool.rs  topology.rs  types.rs  unit.rs  ups.rs  web.rs
projects/conversation/: Cargo.toml
projects/conversation/src/: lib.rs  log_cmd.rs  run.rs
projects/db/: Cargo.toml
projects/db/examples/: db_bench.rs
projects/db/migrations/: 20260523180522__pod_pending_offers_code_plain.down.sql  20260523180522__pod_pending_offers_code_plain.up.sql  20260528120000__users_updated_at.up.sql  20260529120000__api_tokens_user_id.down.sql  20260529120000__api_tokens_user_id.up.sql  20260530120000__plugin_tools_namespace.down.sql  20260530120000__plugin_tools_namespace.up.sql  20260530130000__plugins_drop_mode.down.sql  20260530130000__plugins_drop_mode.up.sql  20260530140000__plugins_drop_mcp_transport.down.sql  20260530140000__plugins_drop_mcp_transport.up.sql  20260602120000__peer_update_state.down.sql  20260602120000__peer_update_state.up.sql  20260602180000__peer_detail_state.down.sql  20260602180000__peer_detail_state.up.sql  20260611024546__ntfy_endpoints.down.sql  20260611024546__ntfy_endpoints.up.sql  20260615200000__host_capabilities.down.sql  20260615200000__host_capabilities.up.sql  20260707000000__auth_can_mutate.down.sql  20260707000000__auth_can_mutate.up.sql  20260714000000__dismissable_notifications.down.sql  20260714000000__dismissable_notifications.up.sql  20260715120000__host_addressing_multivalue.down.sql  20260715120000__host_addressing_multivalue.up.sql  20260716000000__claim_identity.down.sql  20260716000000__claim_identity.up.sql  20260716120000__pending_offer_candidate_addrs.down.sql  20260716120000__pending_offer_candidate_addrs.up.sql
projects/db/src/: api_tokens.rs  cache.rs  claim_identity.rs  config_store.rs  docker_runtimes.rs  docs.rs  feature_flags.rs  host_addressing.rs  host_capabilities.rs  host_status.rs  lib.rs  llm.rs  maintenance.rs  mcp_servers.rs  models.rs  notifications_store.rs  oauth.rs  openapi_specs.rs  openapi_specs_registry.rs  peer_detail_state.rs  peer_update_state.rs  plugin_creds.rs  plugin_data.rs  plugin_installs.rs  plugin_manifest.rs  plugin_tables.rs  plugin_tools.rs  plugin_types.rs  plugins.rs  pool.rs  ports.rs  profile_creds.rs  profiles.rs  replicate.rs  replicate_engine.rs  scheduler_runs.rs  schema_databases.rs  schema_fragments.rs  secrets.rs  sessions.rs  (+4 more)
projects/deploy-target/: Cargo.toml
projects/deploy-target/src/: lib.rs
projects/derive/: Cargo.toml
projects/derive/src/: endpoint_resource.rs  endpoint_resource_attr.rs  endpoint_tool.rs  lib.rs  orca_async.rs  plugin_error.rs  plugin_struct.rs
projects/dev/: Cargo.toml
projects/dev/src/: dev_serve.rs  lib.rs  mode.rs  sweep.rs
projects/dispatch/: Cargo.toml
projects/dispatch/src/: cli.rs  diagnostics_surface.rs  erased.rs  inventory_slice.rs  lib.rs  openapi.rs  registry.rs  remote_ok.rs  tool_roles.rs  unit_surface.rs  ups_surface.rs
projects/files/: Cargo.toml
projects/files/src/: atomic.rs  embedded.rs  lib.rs  markdown.rs  ops.rs  roots.rs  tools.rs  tree.rs  watch.rs
projects/graphql/: Cargo.toml
projects/graphql/src/: introspection.rs  lib.rs  shopify_proxy.rs
projects/inventory-tests/: Cargo.toml
projects/inventory-tests/src/: lib.rs
projects/inventory-tests/tests/: inventory.rs
projects/macro-runtime/: Cargo.toml
projects/macro-runtime/src/: lib.rs  replicate_table.rs
projects/mcp/: Cargo.toml
projects/mcp/src/: client.rs  context7.rs  lib.rs  types.rs
projects/model/: Cargo.toml
projects/model/src/: discovery.rs  engine.rs  lib.rs  local.rs  models.rs  resolve.rs  types.rs
projects/namespace/: Cargo.toml
projects/namespace/src/: lib.rs  manager.rs  native.rs
projects/notifications/: Cargo.toml
projects/notifications/src/: lib.rs  notify_send.rs
projects/openapi/: Cargo.toml
projects/openapi/src/: lib.rs  lower_31.rs  normalize.rs
projects/openapi/tests/: plex_lower.rs
projects/orca-inventory/: Cargo.toml
projects/orca-inventory/src/: lib.rs
projects/plugin-abi/: Cargo.toml
projects/plugin-abi/src/: lib.rs
projects/plugin-loader/: Cargo.toml
projects/plugin-loader/src/: capability.rs  lib.rs  supervisor.rs
projects/plugin-loader/tests/: load_jellyfin.rs  load_nfs.rs  load_ntfy.rs  smb_sideload.rs
projects/plugin-proto/: Cargo.toml
projects/plugin-proto/src/: lib.rs  session.rs
projects/plugin-toolkit/: Cargo.toml
projects/plugin-toolkit-build/: Cargo.toml
projects/plugin-toolkit-build/src/: descriptor.rs  graphql.rs  lib.rs  openapi.rs  plugin.rs  prune.rs
projects/plugin-toolkit/src/: abi.rs  address.rs  agents.rs  api_client.rs  backend_def.rs  capsink.rs  client.rs  core_tables.rs  delegated_http.rs  descriptor.rs  export.rs  io.rs  lib.rs  lifecycle.rs  logging.rs  prelude.rs  process.rs  reactor.rs  runtime.rs  secrets.rs  serde_ext.rs  serve.rs  serve_macros.rs  socketio.rs  stream.rs  time.rs  (+1 more)
projects/pod/: Cargo.toml
projects/runtime/: Cargo.toml
projects/server/: Cargo.toml  build.rs
(+443 files in other folders)
