[package]
name = "contract"
version.workspace = true
edition.workspace = true

[lib]
name = "contract"
path = "src/lib.rs"

# Leaf "cold types" crate — the contract shared across every layer
# (def + error + JsonAny + protocol types) plus the runtime trait
# anchors (OrcaTool, ToolCtx, RemoteExec). `orca-dispatch` depends on this
# crate for its runtime; the proc-macro (`orca-macro`) emits paths into this
# crate so generated code never sees the runtime's modules.

# ── Feature surface ─────────────────────────────────────────────────────
#
# `in-process` carries the tokio reactor + the host-side loaded-plugin JSON proxies
# (`*Proxy`/`register_from_def`/`InvokeThunk` in each domain module) that drive
# a *loaded* plugin over the FFI boundary via `spawn_blocking`. Only the daemon
# (and any in-process host) does that, so it is folded into `full`/default and
# every in-daemon build is byte-for-byte unchanged.
#
# A THIN (out-of-process / subprocess) plugin sets `default-features = false`:
# it keeps the always-on domain models + traits + registries + the tokio-free
# plugin-side `dispatch_op`, and links NO tokio — the proxy is a host concern,
# mirroring the `storage`/`deploy-target` crates. This is why `cargo tree` shows
# tokio ABSENT with `in-process` off.
[features]
default = ["full"]
full = ["in-process"]
in-process = ["dep:tokio"]

[dependencies]
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
dirs = { workspace = true }
rust-embed = { workspace = true }
# `rt` only: the cluster-roster / topology plugin proxies offload their
# synchronous `invoke` thunk onto `spawn_blocking` so a slow subprocess plugin
# never blocks an async worker — the same pattern the storage/notify proxies use.
# In-process only (host-side proxy) — a thin subprocess plugin links no tokio.
tokio = { workspace = true, features = ["rt"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
