[package]
name = "conversation"
version.workspace = true
edition.workspace = true

[lib]
name = "conversation"
path = "src/lib.rs"

[dependencies]
plugin-toolkit = { path = "../plugin-toolkit" }
macro-runtime = { path = "../macro-runtime" }
contract = { path = "../contract" }
derive    = { path = "../derive" }
dispatch = { path = "../dispatch" }
schemars      = { workspace = true }
serde         = { workspace = true }
inventory     = { workspace = true }
tracing       = { workspace = true }
utils    = { path = "../utils" }
model           = { path = "../model" }

anyhow        = { workspace = true }
async-trait   = { workspace = true }
clap          = { workspace = true }
colored       = { workspace = true }
crossterm     = { workspace = true }
futures-util  = { workspace = true }
ratatui       = { workspace = true }
rustyline     = { workspace = true }
serde_json    = { workspace = true }
tokio         = { workspace = true }
tokio-util    = { workspace = true }
unicode-width = "0.2"
uuid          = { workspace = true }
dirs          = { workspace = true }
agents        = { path = "../plugins/agents" }
db            = { package = "db", path = "../db" }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
