[package]
name = "deploy-target"
version.workspace = true
edition.workspace = true

[lib]
name = "deploy_target"
path = "src/lib.rs"

# в”Ђв”Ђ Feature surface в”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђв”Ђ
#
# `in-process` carries the tokio reactor + the host-side loaded-plugin proxy
# (`DeployProxy`/`register_from_def`/`InvokeThunk`) that drives a *loaded*
# plugin over the FFI boundary via `spawn_blocking` вЂ” a daemon/host concern,
# folded into `full`/default so in-daemon builds are byte-for-byte unchanged.
#
# A THIN (subprocess) plugin sets `default-features = false`: it keeps the
# always-on domain model + trait + registry + the tokio-free plugin-side
# `dispatch_op`, and links NO tokio (the proxy is a capability, like `http`/`db`).
# `cargo tree` shows tokio ABSENT with `in-process` off. Mirrors `storage`.
[features]
default = ["full"]
full = ["in-process"]
in-process = ["dep:tokio"]

[dependencies]
async-trait = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
schemars    = { workspace = true }
# `spawn_blocking` for the loaded-plugin JSON proxy: the `invoke` thunk is
# synchronous, so the async DeployProxy offloads it to the blocking pool,
# bounded by the caller's timeout. In-process only вЂ” a thin subprocess plugin
# links no tokio. Mirrors the `storage` domain crate.
tokio       = { workspace = true, optional = true }

[lints]
workspace = true
