[package]
name = "macro-runtime"
version.workspace = true
edition.workspace = true

[lib]
name = "macro_runtime"
path = "src/lib.rs"

# Domain: macro-emission target paths for derive macros (`#[orca_tool]`,
# `endpoint_resource!`, `#[derive(Replicated)]`). Deliberate consolidation
# crate per [[feedback-no-re-export-layers]] — every workspace/ecosystem
# crate the macros emit absolute paths into is re-exported HERE so that a
# consumer only needs ONE dep (`orca-macro-runtime`) for macro resolution.
#
# Pairs with `db-types` (the target-types consolidation crate it depends
# on) — orca-macro-runtime is the *path-resolution* gateway; db-types
# owns the registration struct definitions.

[features]
# `replication` gates the only rusqlite-touching surface: the
# `#[derive(Replicated)]` target type `ReplicatedRegistration` (whose
# export/merge fns take a `rusqlite::Connection`) plus the `rusqlite`
# re-export the derive emits paths into. Replication runs IN CORE (the daemon
# holds the single connection + drives mesh sync), so only core crates that
# use `#[derive(Replicated)]` (pod, db) enable it. Plugins reach the DB over
# the capability channel and never link rusqlite. See [[plugins-stay-thin]].
default = []
replication = ["dep:rusqlite"]

[dependencies]
# Workspace crates the macros emit paths into.
contract    = { path = "../contract" }
derive      = { path = "../derive" }
dispatch    = { path = "../dispatch" }
# Light utils seam — only the tree-shaken core (no contract/tokio/glob) — so
# generated replication code can stamp the canonical unix-millis lww clock
# (`now_millis_since_epoch`) instead of hand-rolling `SystemTime`.
utils       = { path = "../utils", default-features = false }

# Ecosystem crates the macros emit paths into.
anyhow      = { workspace = true }
async-trait = { workspace = true }
clap        = { workspace = true }
inventory   = { workspace = true }
rusqlite    = { workspace = true, optional = true }
schemars    = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true, features = ["rt"] }

[lints]
workspace = true
